Merge multipart series: Java x3 → 1, ChatOps x2 → 1
The original Substack imports kept the inter-part scaffolding —
recap intros ("Last week, we talked about..."), teaser outros
("Next week, I continue with..."), and italicized navigation
listing what each Part covers. After migration that scaffolding
just clutters the read.

Java series (3 → 1): "is not as simple as 'stay on LTS'" + "is not
as simple as 'do it every six months'" + "is quite simple"
collapse into one post titled "Java version upgrade", living at
the original Part 1 URL. Sections of all three parts run in order:
What is the Java version? → Major, minor, LTS, previews → Vendors
→ Reasons to upgrade → Limiting factors → How to select Java
upgrade strategy? → Real-life example → It wasn't that simple!

ChatOps on-call (2 → 1): the "duology that called itself a
trilogy" becomes one post titled "Guiding team processes with
ChatOps: On-call" at the Part 1 URL. Sections: Slack on-call topic
→ Slack on-call group → On-call schedule reminder → On-call
handoff → On-call engineer is out → All lessons together.

publishedAt set to the latest part's date so the merged piece
sorts as recent-as-the-final-installment.

Updated 2023-wrapped to drop the "Trilogy" section (now a single
link) — renamed to "Longest read" with a one-paragraph summary of
the merged ChatOps post.

Removed 4 orphan images that the parts' covers used to point to.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>